# megamock

./: .gitignore  FEATURES.md  GUIDANCE.md  Makefile  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartBackground.sh  postStartCommand.sh
.github/actions/test/: action.yml
.github/workflows/: pr.yml  publish.yml  tests.yml
.ptyme_track/: JamesHutchison
gpt/: instructions.gpt.txt  reference.txt  settings.txt  step_instructions.txt
megamock/: __init__.py  custom_loader.py  import_machinery.py  import_references.py  import_types.py  megamocks.py  megapatches.py  megapatching.py  megas.py  megawrap.py  name_words.py  type_util.py
megamock/plugins/: pytest.py
rust/.github/workflows/: CI.yml
rust/import_references/: Cargo.toml  pyproject.toml
rust/import_references/src/: lib.rs
tests/: conftest.py  test_custom_loader.py  test_import_machinery.py  test_megamocks.py  test_megapatches.py  test_megapatching.py  test_megas.py
tests/manual/: megamock_type_hints.py
tests/perf/: .gitignore  generate_files_to_import.py  test_importer.py
tests/simple_app/: __init__.py  bar.py  does_rename.py  foo.py  nested_classes.py  uses_nested_classes.py
tests/unit/: conftest.py  test_import_machinery.py  test_import_references.py  test_megamocks.py  test_megapatches.py  test_plugins.py
tests/unit/simple_app/: async_portion.py  bar.py  does_rename.py  foo.py  for_autouse_1.py  for_autouse_2.py  generics.py  helpful_manager.py  locks.py  nested_classes.py  pydantic_objects.py  uses_nested_classes.py
