[tool.poetry]
name = "megamock"
version = "0.1.0-alpha.2"
description = "Mega mocking capabilities"
authors = ["James Hutchison <jamesghutchison@proton.me>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/JamesHutchison/megamock"
repository = "https://github.com/JamesHutchison/megamock"
keywords = ["mock", "test"]
include = [
    "LICENSE"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
]

[tool.poetry.dependencies]
python = ">=3.10 <4.0"
varname = {extras = ["asttokens"], version = "^0.10.0"}
asttokens = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^0.991"
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
