[package]
name = "mega-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "megamock_import_references"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
defaultdict = "0.15.0"
once_cell = "1.17.1"
